--- a/css/style.css
+++ b/css/style.css
@@ -204,8 +204,8 @@ nav { display: none;}
      margin-bottom: 4em;
  }
 
- #goal1 {
-     text-align: left;
+ .portfolio {
+    grid: 20px; 
  }
    
 
