--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     --fw-reg: 300;
     --fe-bold: 900;
 
-    --clr-light: #fff;
+    --clr-light: black;
     --clr-dark: #303030;
     --clr-accent: #16e0bd;
 
@@ -49,7 +49,8 @@ body {
 
 
 section {
-    padding: 5em 2em;
+    padding: 5em 2px;
+    margin-right: 2px;
 }
 
 
@@ -101,6 +102,23 @@ h3 { font-size: var(--fs-h3) }
 
 .section__title {
     margin-bottom: .25em;
+    animation: 2s multicolor;
+    animation-iteration-count: infinite;
+}
+
+@keyframes multicolor {
+    0%{
+        color: black;
+    }
+    33%{
+        color: red;
+    }
+    66%{
+        color: blue;
+    }
+    100%{
+        color: green;
+    }
 }
 
 .section__title--intro {
@@ -137,7 +155,7 @@ nav { display: none;}
 }
 
 .intro__img {
-    box-shadow: var(--bs);
+    box-shadow: 0px 0px 15px white;
 }
 
 @media (min-width: 600px) {
@@ -202,13 +220,38 @@ nav { display: none;}
 
  .services {
      margin-bottom: 4em;
+     color: white;
  }
 
  .portfolio {
     grid: 20px; 
  }
    
-
-
+.bottomimg{
+   margin-top: 100px;
+   animation-name: colorbox;
+   animation-iteration-count:infinite;
+   animation-duration:4s;
+   animation-direction: normal;
+}
+@keyframes colorbox {
+      0%  {border:red solid 10px;box-shadow: 0px 0px 30px red;}
+      10% {border:orange solid 10px;box-shadow: 0px 0px 30px orange;}
+      30% {border:yellow solid 10px;box-shadow: 0px 0px 30px yellow} 
+      50% {border:green solid 10px;box-shadow: 0px 0px 30px green;}
+      70% {border:blue solid 10px;box-shadow: 0px 0px 30px blue;}
+      90% {border:purple solid 10px;box-shadow: 0px 0px 30px purple;}
+      100%{border:violet solid 10px;box-shadow: 0px 0px 30px violet;
+        
+    }
+}
+.bottomimg2{
+    margin-top: 200px;
+    border: #303030 solid;
+    animation-name: colorbox;
+    animation-iteration-count:infinite;
+    animation-duration:4s;
+    animation-direction: normal;
+}
 
 
